--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,19 +1,22 @@
 image: node:latest
-services:
-  - mysql:latest
-  - redis:latest
-  - postgres:latest
 
 cache:
   paths:
   - node_modules/
 
-test_async:
-  script:
-   - npm install
-   - node ./specs/start.js ./specs/async.spec.js
+before_script:
+  - apt-get update -qq && apt-get install -y -qq sshpass
 
-test_db:
+deploy:
+  only:
+    - master
   script:
-   - npm install
-   - node ./specs/start.js ./specs/db-postgres.spec.js
+    - rm ./package-lock.json
+    - npm install
+    - npm run build
+    - npm cache clean --force
+    - rm -rf .git
+    - rm -rf node_modules
+    - sshpass -V
+    - export SSHPASS=$PASSWD
+    - sshpass -e scp -o stricthostkeychecking=no -r . root@134.209.85.0:/var/www/html
