--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "react-dom": "^16.8.3",
     "react-scripts": "2.1.5"
   },
+  "homepage":"https://l4netly.github.io/me/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
